Fixed database, no circular references anymore
